--- a/src/templates/hello.html
+++ b/src/templates/hello.html
@@ -35,7 +35,7 @@
             <p id="displaydoc" style="background-color: white; overflow-y: scroll; width: 480px; height: 550px" readonly> </p>
         </form>
     </div>
-    <div class="image">
+    <div class="image" id="image_div">
         <h3 id="num_labeled"> </h3>
         <button onclick="plot_send()" disabled> Plot </button>
         <button onclick="export_send()" disabled> Export </button>
