--- a/src/templates/hello.html
+++ b/src/templates/hello.html
@@ -38,6 +38,7 @@
     <div class="image" id="image_div">
         <h3 id="num_labeled"> </h3>
         <button onclick="plot_send()" disabled> Plot </button>
+        <input type="checkbox" id="auto_plot"> Auto Plot
         <button onclick="export_send()" disabled> Export </button>
         <button onclick="restart_send()" disabled> Restart </button>
         <img id="myImage" style="width:440px"/>
